Fix scrollbar behaviour

--- a/gcampus/core/static_src/styles/_navbar.scss
+++ b/gcampus/core/static_src/styles/_navbar.scss
@@ -21,7 +21,7 @@
 
 #navbar-title {
   overflow-y: hidden;
-  overflow-x: scroll;
+  overflow-x: auto;
 }
 
 main {
